# PyLangGetter

./: .gitignore  LangGetter.py  PyLangGetter.py  README.md  pyproject.toml  utils.py
pylanggetter/: __init__.py  __main__.py  pylanggetter.py  utils.py
